# cryptotrader

crypto_trader/: README.md  pyproject.toml
crypto_trader/src/crypto_trader/: crew.py  main.py
crypto_trader/src/crypto_trader/config/: agents.yaml  tasks.yaml
