[tool.poetry]
name = "crypto_trader"
version = "0.1.0"
description = "crypto_trader using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.55.2,<1.0.0" }
pandas = "^2.2.2"
python-binance = "^1.0.19"
ta-lib = "^0.4.32"


[tool.poetry.scripts]
crypto_trader = "crypto_trader.main:run"
run_crew = "crypto_trader.main:run"
train = "crypto_trader.main:train"
replay = "crypto_trader.main:replay"
test = "crypto_trader.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
